Basic observation rooms (ideally the surrounding brushes would be clipped and shrunk to 16 units thick, but that's a lot more complicated)